--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -114,7 +114,7 @@ if(!property.IsReadOnly)
     @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
     }
 
-    @foreach (var exception in method.ExceptionStatements)
+    foreach (var exception in method.ExceptionStatements)
     {
     @: * @@throws @exception
     }
