stripped versions of request and response as error object properties.

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodJsonPipelineTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodJsonPipelineTemplate.cshtml
@@ -12,8 +12,8 @@ return client.pipeline(httpRequest, function (err, response, responseBody) {
   if (@(Model.FailureStatusCodePredicate)) {
     var error = new Error(responseBody);
     error.statusCode = response.statusCode;
-    error.request = httpRequest;
-    error.response = response;
+    error.request = msRest.stripRequest(httpRequest);
+    error.response = msRest.stripResponse(response);
     if (responseBody === '') responseBody = null;
     var parsedErrorResponse;
     try {
