--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
@@ -42,6 +42,14 @@ public interface @Model.Name {
     void setLogLevel(Level logLevel);
 @EmptyLine
     /**
+     * Gets the adapter for {@@link com.fasterxml.jackson.databind.ObjectMapper} for serialization
+     * and deserialization operations..
+     *
+     * @@return the adapter.
+     */
+    JacksonMapperAdapter getMapperAdapter();
+@EmptyLine
+    /**
      * Gets the {@@link AzureClient} used for long running operations.
      * @@return the azure client;
      */
