--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -42,6 +42,14 @@ public interface @Model.Name {
      * @@param logLevel the logging level enum.
      */
     void setLogLevel(Level logLevel);
+@EmptyLine
+    /**
+     * Gets the adapter for {@@link com.fasterxml.jackson.databind.ObjectMapper} for serialization
+     * and deserialization operations..
+     *
+     * @@return the adapter.
+     */
+    JacksonMapperAdapter getMapperAdapter();
 @foreach (var property in Model.Properties)
 {
 @EmptyLine
