--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -77,235 +77,246 @@ public async Task<@(Model.OperationResponseReturnTypeString)> @(Model.Name)WithH
     HttpRequestMessage _httpRequest = new HttpRequestMessage();
     HttpResponseMessage _httpResponse = null;
 
-    try
+    _httpRequest.Method = new HttpMethod("@(Model.HttpMethod.ToString().ToUpper())");
+    _httpRequest.RequestUri = new Uri(_url);
+    // Set Headers
+    @(Model.SetDefaultHeaders)
+    @foreach (var parameter in Model.LogicalParameterTemplateModels.Where(p => p.Location == ParameterLocation.Header))
     {
-        _httpRequest.Method = new HttpMethod("@(Model.HttpMethod.ToString().ToUpper())");
-        _httpRequest.RequestUri = new Uri(_url);
-        // Set Headers
-        @(Model.SetDefaultHeaders)
-        @foreach (var parameter in Model.LogicalParameterTemplateModels.Where(p => p.Location == ParameterLocation.Header))
+    @:if (@(parameter.Name) != null)
+    @:{
+    @:    if (_httpRequest.Headers.Contains("@(parameter.SerializedName)"))
+    @:    {
+    @:        _httpRequest.Headers.Remove("@(parameter.SerializedName)");
+    @:    }
+    @:    _httpRequest.Headers.TryAddWithoutValidation("@(parameter.SerializedName)", @parameter.Type.ToString(Model.ClientReference, parameter.Name));
+    @:}
+    }
+    if (customHeaders != null)
+    {
+        foreach(var _header in customHeaders)
         {
-        @:if (@(parameter.Name) != null)
-        @:{
-        @:    if (_httpRequest.Headers.Contains("@(parameter.SerializedName)"))
-        @:    {
-        @:        _httpRequest.Headers.Remove("@(parameter.SerializedName)");
-        @:    }
-        @:    _httpRequest.Headers.TryAddWithoutValidation("@(parameter.SerializedName)", @parameter.Type.ToString(Model.ClientReference, parameter.Name));
-        @:}
-        }
-        if (customHeaders != null)
-        {
-            foreach(var _header in customHeaders)
+            if (_httpRequest.Headers.Contains(_header.Key))
             {
-                if (_httpRequest.Headers.Contains(_header.Key))
-                {
-                    _httpRequest.Headers.Remove(_header.Key);
-                }
-                _httpRequest.Headers.TryAddWithoutValidation(_header.Key, _header.Value);
+                _httpRequest.Headers.Remove(_header.Key);
             }
+            _httpRequest.Headers.TryAddWithoutValidation(_header.Key, _header.Value);
         }
-        @EmptyLine
+    }
+    @EmptyLine
 
-        // Serialize Request
-        string _requestContent = null;
-        @if (Model.RequestBody != null)
-        {
-            if (Model.RequestBody.Type == PrimaryType.Stream)
-            {
-            <text>
-        StreamContent _fileStreamContent = new StreamContent(@(Model.RequestBody.Name));
-        _httpRequest.Content = _fileStreamContent;
-        _httpRequest.Content.Headers.ContentType = MediaTypeHeaderValue.Parse("@(Model.RequestContentType)");
-            </text>
-            }
-            else
-            {
-            <text>
-        _requestContent = SafeJsonConvert.SerializeObject(@(Model.RequestBody.Name), @(Model.GetSerializationSettingsReference(Model.RequestBody.Type)));
-        _httpRequest.Content = new StringContent(_requestContent, Encoding.UTF8);
-        _httpRequest.Content.Headers.ContentType = MediaTypeHeaderValue.Parse("@(Model.RequestContentType)");
-            </text>
-            }
-        }
-        else if (Model.LogicalParameters.Where(p => p.Location == ParameterLocation.FormData).Any())
-        {
-            <text>
-        MultipartFormDataContent _multiPartContent = new MultipartFormDataContent();
-            </text>
-            foreach (var parameter in Model.LogicalParameterTemplateModels.Where(p => p.Location == ParameterLocation.FormData))
-            {
-        @:if (@(parameter.Name) != null)
-        @:{
-                if (parameter.Type == PrimaryType.Stream)
-                {
-            <text>        
-            StreamContent _@parameter.Name = new StreamContent(@parameter.Name);
-            _@(parameter.Name).Headers.ContentType = new MediaTypeHeaderValue("application/octet-stream");
-            System.IO.FileStream _@(parameter.Name)AsFileStream = @parameter.Name as System.IO.FileStream;
-            if (_@(parameter.Name)AsFileStream != null)
-            {
-                ContentDispositionHeaderValue _contentDispositionHeaderValue = new ContentDispositionHeaderValue("form-data");
-                _contentDispositionHeaderValue.Name = "@(parameter.SerializedName)";
-                _contentDispositionHeaderValue.FileName = _@(parameter.Name)AsFileStream.Name;
-                _@(parameter.Name).Headers.ContentDisposition = _contentDispositionHeaderValue;        
-            }    
-            </text>
-                }
-                else
-                {
-            @:StringContent _@(parameter.Name) = new StringContent(@(parameter.Type.ToString(Model.ClientReference, parameter.Name)), Encoding.UTF8);
-                }
-            @:_multiPartContent.Add(_@(parameter.Name), "@(parameter.SerializedName)");
-        @:}
-            }
-        @:_httpRequest.Content = _multiPartContent;
-        }
-
-        @if (Settings.AddCredentials)
-        {
-            <text>
-        // Set Credentials
-        if (@(Model.ClientReference).Credentials != null)
-        {
-            cancellationToken.ThrowIfCancellationRequested();
-            await @(Model.ClientReference).Credentials.ProcessHttpRequestAsync(_httpRequest, cancellationToken).ConfigureAwait(false);
-        }
-            </text>
-        }
-    
-        // Send Request
-        if (_shouldTrace)
-        {
-            ServiceClientTracing.SendRequest(_invocationId, _httpRequest);
-        }
-
-        cancellationToken.ThrowIfCancellationRequested();
-        _httpResponse = await @(Model.ClientReference).HttpClient.SendAsync(_httpRequest, cancellationToken).ConfigureAwait(false);
-        if (_shouldTrace)
-        {
-            ServiceClientTracing.ReceiveResponse(_invocationId, _httpResponse);
-        }
-
-        HttpStatusCode _statusCode = _httpResponse.StatusCode;
-        cancellationToken.ThrowIfCancellationRequested();
-        string _responseContent = null;
-
-        if (@(Model.FailureStatusCodePredicate))
-        {
-            var ex = new @(Model.OperationExceptionTypeString)(string.Format("Operation returned an invalid status code '{0}'", _statusCode));
-        @if (Model.DefaultResponse.Body != null)
-        {
-            @:try
-            @:{
-                if (Model.DefaultResponse.Body == PrimaryType.Stream)
-                {
-                @:@(Model.DefaultResponse.Body.Name) _errorBody = await _httpResponse.Content.ReadAsStreamAsync().ConfigureAwait(false);
-                }
-                else
-                {
-                @:_responseContent = await _httpResponse.Content.ReadAsStringAsync().ConfigureAwait(false);
-                @:@(Model.DefaultResponse.Body.Name) _errorBody = SafeJsonConvert.DeserializeObject<@(Model.DefaultResponse.Body.Name)>(_responseContent, @(Model.GetDeserializationSettingsReference(Model.DefaultResponse.Body)));
-                }
-                @:if (_errorBody != null)
-                @:{
-                    @:@(Model.InitializeExceptionWithMessage)
-                    @:ex.Body = _errorBody;
-                @:}
-            @:}
-            @:catch (JsonException)
-            @:{
-            @:    // Ignore the exception
-            @:}
-        }
-            ex.Request = new HttpRequestMessageWrapper(_httpRequest, _requestContent);
-            ex.Response = new HttpResponseMessageWrapper(_httpResponse, _responseContent);
-            @(Model.InitializeException)
-            if (_shouldTrace)
-            {
-                ServiceClientTracing.Error(_invocationId, ex);
-            }
-
-            throw ex;
-        }
-
-        // Create Result
-        var _result = new @(Model.OperationResponseReturnTypeString)();
-        _result.Request = _httpRequest;
-        _result.Response = _httpResponse;
-        @(Model.InitializeResponseBody)
-
-        @foreach (var responsePair in Model.Responses.Where(r => r.Value.Body != null))
+    // Serialize Request
+    string _requestContent = null;
+    @if (Model.RequestBody != null)
+    {
+        if (Model.RequestBody.Type == PrimaryType.Stream)
         {
         <text>
-        // Deserialize Response
-        if ((int)_statusCode == @MethodTemplateModel.GetStatusCodeReference(responsePair.Key))
-        {
-            @if (responsePair.Value.Body == PrimaryType.Stream)
-            {
-            @:_result.Body = await _httpResponse.Content.ReadAsStreamAsync().ConfigureAwait(false);
-            }
-            else
-            {
-            @:try
-            @:{
-                @:_responseContent = await _httpResponse.Content.ReadAsStringAsync().ConfigureAwait(false);
-                @:_result.Body = SafeJsonConvert.DeserializeObject<@(responsePair.Value.Body.Name)>(_responseContent, @(Model.GetDeserializationSettingsReference(responsePair.Value.Body)));
-            @:}
-            @:catch (JsonException ex)
-            @:{
-            @:    throw new RestException("Unable to deserialize the response.", ex);
-            @:}
-            }
-        }
+    StreamContent _fileStreamContent = new StreamContent(@(Model.RequestBody.Name));
+    _httpRequest.Content = _fileStreamContent;
+    _httpRequest.Content.Headers.ContentType = MediaTypeHeaderValue.Parse("@(Model.RequestContentType)");
         </text>
         }
-        @if (Model.ReturnType.Body != null && Model.DefaultResponse.Body != null && !Model.Responses.Any())
+        else
         {
-            if (Model.DefaultResponse.Body == PrimaryType.Stream)
+        <text>
+    _requestContent = SafeJsonConvert.SerializeObject(@(Model.RequestBody.Name), @(Model.GetSerializationSettingsReference(Model.RequestBody.Type)));
+    _httpRequest.Content = new StringContent(_requestContent, Encoding.UTF8);
+    _httpRequest.Content.Headers.ContentType = MediaTypeHeaderValue.Parse("@(Model.RequestContentType)");
+        </text>
+        }
+    }
+    else if (Model.LogicalParameters.Where(p => p.Location == ParameterLocation.FormData).Any())
+    {
+        <text>
+    MultipartFormDataContent _multiPartContent = new MultipartFormDataContent();
+        </text>
+        foreach (var parameter in Model.LogicalParameterTemplateModels.Where(p => p.Location == ParameterLocation.FormData))
+        {
+    @:if (@(parameter.Name) != null)
+    @:{
+            if (parameter.Type == PrimaryType.Stream)
             {
-        @:_result.Body = await _httpResponse.Content.ReadAsStreamAsync().ConfigureAwait(false);
+        <text>        
+        StreamContent _@parameter.Name = new StreamContent(@parameter.Name);
+        _@(parameter.Name).Headers.ContentType = new MediaTypeHeaderValue("application/octet-stream");
+        System.IO.FileStream _@(parameter.Name)AsFileStream = @parameter.Name as System.IO.FileStream;
+        if (_@(parameter.Name)AsFileStream != null)
+        {
+            ContentDispositionHeaderValue _contentDispositionHeaderValue = new ContentDispositionHeaderValue("form-data");
+            _contentDispositionHeaderValue.Name = "@(parameter.SerializedName)";
+            _contentDispositionHeaderValue.FileName = _@(parameter.Name)AsFileStream.Name;
+            _@(parameter.Name).Headers.ContentDisposition = _contentDispositionHeaderValue;        
+        }    
+        </text>
             }
             else
             {
-        @:try
-        @:{
-            @:string _defaultResponseContent = await _httpResponse.Content.ReadAsStringAsync().ConfigureAwait(false);
-            @:_result.Body = SafeJsonConvert.DeserializeObject<@(Model.DefaultResponse.Body.Name)>(_defaultResponseContent, @(Model.GetDeserializationSettingsReference(Model.DefaultResponse.Body)));
-        @:}
-        @:catch (JsonException ex)
-        @:{
-        @:    throw new RestException("Unable to deserialize the response.", ex);
-        @:}
+        @:StringContent _@(parameter.Name) = new StringContent(@(parameter.Type.ToString(Model.ClientReference, parameter.Name)), Encoding.UTF8);
             }
+        @:_multiPartContent.Add(_@(parameter.Name), "@(parameter.SerializedName)");
+    @:}
         }
+    @:_httpRequest.Content = _multiPartContent;
+    }
 
-        @if (Model.ReturnType.Headers != null)
-        {
+    @if (Settings.AddCredentials)
+    {
+        <text>
+    // Set Credentials
+    if (@(Model.ClientReference).Credentials != null)
+    {
+        cancellationToken.ThrowIfCancellationRequested();
+        await @(Model.ClientReference).Credentials.ProcessHttpRequestAsync(_httpRequest, cancellationToken).ConfigureAwait(false);
+    }
+        </text>
+    }
+    
+    // Send Request
+    if (_shouldTrace)
+    {
+        ServiceClientTracing.SendRequest(_invocationId, _httpRequest);
+    }
+
+    cancellationToken.ThrowIfCancellationRequested();
+    _httpResponse = await @(Model.ClientReference).HttpClient.SendAsync(_httpRequest, cancellationToken).ConfigureAwait(false);
+    if (_shouldTrace)
+    {
+        ServiceClientTracing.ReceiveResponse(_invocationId, _httpResponse);
+    }
+
+    HttpStatusCode _statusCode = _httpResponse.StatusCode;
+    cancellationToken.ThrowIfCancellationRequested();
+    string _responseContent = null;
+
+    if (@(Model.FailureStatusCodePredicate))
+    {
+        var ex = new @(Model.OperationExceptionTypeString)(string.Format("Operation returned an invalid status code '{0}'", _statusCode));
+    @if (Model.DefaultResponse.Body != null)
+    {
         @:try
         @:{
-            @:_result.Headers = _httpResponse.GetHeadersAsJson().ToObject<@(Model.ReturnType.Headers.Name)>(JsonSerializer.Create(@(Model.GetDeserializationSettingsReference(Model.DefaultResponse.Body))));
+            if (Model.DefaultResponse.Body == PrimaryType.Stream)
+            {
+            @:@(Model.DefaultResponse.Body.Name) _errorBody = await _httpResponse.Content.ReadAsStreamAsync().ConfigureAwait(false);
+            }
+            else
+            {
+            @:_responseContent = await _httpResponse.Content.ReadAsStringAsync().ConfigureAwait(false);
+            @:@(Model.DefaultResponse.Body.Name) _errorBody = SafeJsonConvert.DeserializeObject<@(Model.DefaultResponse.Body.Name)>(_responseContent, @(Model.GetDeserializationSettingsReference(Model.DefaultResponse.Body)));
+            }
+            @:if (_errorBody != null)
+            @:{
+                @:@(Model.InitializeExceptionWithMessage)
+                @:ex.Body = _errorBody;
+            @:}
         @:}
-        @:catch (JsonException ex)
+        @:catch (JsonException)
         @:{
-        @:    throw new RestException("Unable to deserialize the headers.", ex);
+        @:    // Ignore the exception
         @:}
-        }
-
+    }
+        ex.Request = new HttpRequestMessageWrapper(_httpRequest, _requestContent);
+        ex.Response = new HttpResponseMessageWrapper(_httpResponse, _responseContent);
+        @(Model.InitializeException)
         if (_shouldTrace)
         {
-            ServiceClientTracing.Exit(_invocationId, _result);
+            ServiceClientTracing.Error(_invocationId, ex);
         }
 
-        return _result;
-    }
-    catch
-    {
         _httpRequest.Dispose();
         if (_httpResponse != null)
         {
             _httpResponse.Dispose();
         }
-        throw;
-    }    
+        throw ex;
+    }
+
+    // Create Result
+    var _result = new @(Model.OperationResponseReturnTypeString)();
+    _result.Request = _httpRequest;
+    _result.Response = _httpResponse;
+    @(Model.InitializeResponseBody)
+
+    @foreach (var responsePair in Model.Responses.Where(r => r.Value.Body != null))
+    {
+    <text>
+    // Deserialize Response
+    if ((int)_statusCode == @MethodTemplateModel.GetStatusCodeReference(responsePair.Key))
+    {
+        @if (responsePair.Value.Body == PrimaryType.Stream)
+        {
+        @:_result.Body = await _httpResponse.Content.ReadAsStreamAsync().ConfigureAwait(false);
+        }
+        else
+        {
+
+        @:_responseContent = await _httpResponse.Content.ReadAsStringAsync().ConfigureAwait(false);
+        @:try
+        @:{
+            @:_result.Body = SafeJsonConvert.DeserializeObject<@(responsePair.Value.Body.Name)>(_responseContent, @(Model.GetDeserializationSettingsReference(responsePair.Value.Body)));
+        @:}
+        @:catch (JsonException ex)
+        @:{
+        @:    _httpRequest.Dispose();
+        @:    if (_httpResponse != null)
+        @:    {
+        @:        _httpResponse.Dispose();
+        @:    }
+        @:    throw new SerializationException("Unable to deserialize the response.", _responseContent, ex);
+        @:}
+        }
+    }
+    </text>
+    }
+
+    @if (Model.ReturnType.Body != null && Model.DefaultResponse.Body != null && !Model.Responses.Any())
+    {
+        if (Model.DefaultResponse.Body == PrimaryType.Stream)
+        {
+    @:_result.Body = await _httpResponse.Content.ReadAsStreamAsync().ConfigureAwait(false);
+        }
+        else
+        {
+    @:string _defaultResponseContent = await _httpResponse.Content.ReadAsStringAsync().ConfigureAwait(false);
+    @:try
+    @:{
+        @:_result.Body = SafeJsonConvert.DeserializeObject<@(Model.DefaultResponse.Body.Name)>(_defaultResponseContent, @(Model.GetDeserializationSettingsReference(Model.DefaultResponse.Body)));
+    @:}
+    @:catch (JsonException ex)
+    @:{
+    @:    _httpRequest.Dispose();
+    @:    if (_httpResponse != null)
+    @:    {
+    @:        _httpResponse.Dispose();
+    @:    }
+    @:    throw new SerializationException("Unable to deserialize the response.", _defaultResponseContent, ex);
+    @:}
+        }
+    }
+
+    @if (Model.ReturnType.Headers != null)
+    {
+
+    @:try
+    @:{
+        @:_result.Headers = _httpResponse.GetHeadersAsJson().ToObject<@(Model.ReturnType.Headers.Name)>(JsonSerializer.Create(@(Model.GetDeserializationSettingsReference(Model.DefaultResponse.Body))));
+    @:}
+    @:catch (JsonException ex)
+    @:{
+    @:    _httpRequest.Dispose();
+    @:    if (_httpResponse != null)
+    @:    {
+    @:        _httpResponse.Dispose();
+    @:    }
+    @:    throw new SerializationException("Unable to deserialize the headers.", _httpResponse.GetHeadersAsJson().ToString(), ex);
+    @:}
+    }
+
+    if (_shouldTrace)
+    {
+        ServiceClientTracing.Exit(_invocationId, _result);
+    }
+
+    return _result;
 }
