initialize requestContent to be an empty string

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -121,7 +121,7 @@
       { 
   <text>
   // Serialize Request
-  var requestContent = null;
+  var requestContent = '';
   var requestModel = null;
   try {
     if (@(Model.RequestBody.Name) !== null && @(Model.RequestBody.Name) !== undefined) {
