--- a/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionMethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionMethodTemplate.cshtml
@@ -72,7 +72,7 @@ foreach (var parameter in Model.LocalParameters)
         {
     @:var _result = await operations.@(Model.Name)WithHttpMessagesAsync(@(Model.GetAsyncMethodInvocationArgs("null"))).ConfigureAwait(false);
     @:_result.Request.Dispose();
-    @:return new HttpResponseMessageStream(_result.Response, _result.Body);
+    @:return _result.Body;
         }
         else
         {
