Update python after merge with master:
1. add head exception and request-id tests
2. in azure, CloudError will set request id
3. Fix bug for default value of boolean
4. Accept new client property: generate_client_request_id.

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureLongRunningMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureLongRunningMethodTemplate.cshtml
@@ -103,7 +103,7 @@ else
         def get_long_running_output(response):
 @EmptyLine
             if @Model.FailureStatusCodePredicate:
-                raise @Model.RaisedException
+                @Model.RaisedException
 @EmptyLine
 @if (Model.HasAnyResponse)
 {
