--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
@@ -84,7 +84,7 @@ else
 }
 @EmptyLine
             if @Model.FailureStatusCodePredicate:
-                raise @Model.RaisedException
+                @Model.RaisedException
 @EmptyLine
             return response
 @EmptyLine
