--- a/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
@@ -110,7 +110,7 @@ else
 }
 @EmptyLine
         if @Model.FailureStatusCodePredicate:
-            raise @Model.RaisedException
+            @Model.RaisedException
 @EmptyLine
 @if (Model.HasAnyResponse)
 {
