Change summary on validate method #439

--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -72,7 +72,7 @@ namespace @(Settings.Namespace).Models
 @if(@Model.ShouldValidateChain())
 {
         @:/// <summary>
-        @:/// Validate the object. Throws ArgumentException or ArgumentNullException if validation fails.
+        @:/// Validate the object. Throws ValidationException if validation fails.
         @:/// </summary>
         @:public @Model.MethodQualifier void Validate()
         @:{
