--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
@@ -46,7 +46,7 @@ class @(Model.Name)Configuration(AzureConfiguration):
 @EmptyLine
 @foreach(var property in Model.Properties)
 {
-@:    @ParameterWrapComment(string.Empty, ":param " + property.Name + ": " + property.Documentation)
+@:    @ParameterWrapComment(string.Empty, ServiceClientTemplateModel.GetPropertyDocumentationString(property))
 @:    @ParameterWrapComment(string.Empty, ":type " + property.Name + ": " + MethodTemplateModel.GetDocumentationType(property.Type, property.IsRequired))
 }    :param str base_url: Service URL
     :param str filepath: Existing config
@@ -73,7 +73,7 @@ class @(Model.Name)Configuration(AzureConfiguration):
 @EmptyLine
 @EmptyLine
 class @(Model.Name)(object):
-    """@Model.Documentation.EscapeXmlComment()
+    """@Model.ServiceDocument
 @EmptyLine
     :param config: Configuration for client.
     :type config: @(Model.Name)Configuration
