Improved Constants to be based on 1 enum value + required = true. Added initialization for models & method parameters with c/x types that contain constants.

--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -47,9 +47,18 @@ public async Task<@(Model.OperationResponseReturnTypeString)> @(Model.Name)WithH
         }
     }
 
-    @foreach (ParameterTemplateModel parameter in Model.ParameterTemplateModels.Where(p => p.IsConstant))
+    @foreach (ParameterTemplateModel parameter in Model.ParameterTemplateModels)
     {
+        if (parameter.IsConstant)
+        {
     @:@(parameter.Type.Name) @(parameter.Name) = @(parameter.DefaultValue);
+        }
+
+        if (parameter.Type is CompositeType && ((CompositeType)parameter.Type).ComposedProperties.Any(p => p.IsConstant))
+        {
+    @:@(parameter.Type.Name) @(parameter.Name) = new @(parameter.Type.Name)();
+        }
+
     }
     @Model.BuildInputMappings()
     // Tracing
