--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -36,6 +36,7 @@ namespace @(Settings.Namespace).Models
         public @(Model.Name)()
         {
             @foreach(var property in Model.ComposedProperties.Where(p => p.Type is CompositeType
+                && !p.IsConstant
                 && ((CompositeType)p.Type).ComposedProperties.Any(p2 => p2.IsConstant)))
             {
             @:this.@(property.Name) = new @(property.Type.Name)();
@@ -68,12 +69,28 @@ namespace @(Settings.Namespace).Models
             }
 
             @foreach (var property in Model.ComposedProperties.Where(p => p.Type is CompositeType
-                     && ((CompositeType)p.Type).ComposedProperties.Any(p2 => p2.IsConstant)))
+                && !p.IsConstant
+                && ((CompositeType)p.Type).ComposedProperties.Any(p2 => p2.IsConstant)))
             {
             @:@(property.Name) = new @(property.Type.Name)();
             }
         @:}
         }
+
+        @if (Model.PropertyTemplateModels.Any(p => p.IsConstant))
+        {
+        @:/// <summary>
+        @:@WrapComment("/// ", ("Static constructor for " + Model.Name + " class.").EscapeXmlComment())
+        @:/// </summary>
+        @:static @(Model.Name)()
+        @:{
+            @foreach (var property in Model.PropertyTemplateModels.Where(p => p.IsConstant))
+            {
+            @:@(property.Name) = @(property.DefaultValue);
+            }
+        @:}
+        }
+
         @EmptyLine
         @foreach (var property in Model.PropertyTemplateModels.Where(p => !p.IsConstant))
         {
@@ -107,7 +124,7 @@ namespace @(Settings.Namespace).Models
         @:[JsonConverter(typeof(DateTimeRfc1123JsonConverter))]
             }
         @:[JsonProperty(PropertyName = "@property.SerializedName")]
-        @:public static @property.Type.Name @property.Name { get { return @(property.DefaultValue); } }
+        @:public static @property.Type.Name @property.Name { get; private set; }
         @EmptyLine
         }
 @if(@Model.ShouldValidateChain())
@@ -134,7 +151,8 @@ namespace @(Settings.Namespace).Models
             @:}
             @:
             }
-            foreach (var property in Model.Properties.Where(p => p.Constraints.Any() || !(p.Type is PrimaryType)))
+            foreach (var property in Model.Properties.Where(p => !p.IsConstant 
+                && (p.Constraints.Any() || !(p.Type is PrimaryType))))
             {
                 anythingToValidate = true;
             @:@property.Type.ValidateType(Model.Scope, string.Format("this.{0}", property.Name), property.Constraints)
