--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -74,8 +74,17 @@ public async Task<@(Model.OperationResponseReturnTypeString)> @(Model.Name)WithH
     }
     else
     {
-    @:var _baseUrl = @(Model.ClientReference).BaseUri.AbsoluteUri;
-    @:var _url = new Uri(new Uri(_baseUrl + (_baseUrl.EndsWith("/") ? "" : "/")), "@(Model.Url.TrimStart('/'))").ToString();
+        if (Model.IsCustomBaseUri)
+        {
+            @:var _baseUrl = @(Model.ClientReference).BaseUri;
+            @:var _url = _baseUrl + (_baseUrl.EndsWith("/") ? "" : "/") + "@(Model.Url.TrimStart('/'))").ToString();
+        }
+        else
+        {
+            @:var _baseUrl = @(Model.ClientReference).BaseUri.AbsoluteUri;
+            @:var _url = new Uri(new Uri(_baseUrl + (_baseUrl.EndsWith("/") ? "" : "/")), "@(Model.Url.TrimStart('/'))").ToString();
+        }
+    
     }
     @(Model.BuildUrl("_url"))
     // Create HTTP transport objects
