--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Python
-@using Microsoft.Rest.Generator.Python.TemplateModels
 @using Microsoft.Rest.Generator.Python.Templates
+@using Microsoft.Rest.Generator.Python.TemplateModels
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
 @inherits Microsoft.Rest.Generator.Python.PythonTemplate<Microsoft.Rest.Generator.Python.ServiceClientTemplateModel>
@@ -25,7 +25,7 @@ from msrest.pipeline import ClientRawResponse
 @:from .operations.@(modelGroupType.MethodGroupType.ToPythonCase()) import @modelGroupType.MethodGroupType
   }
 }
-@if (Model.ModelTemplateModels.Any())
+@if (Model.HasAnyModel)
 {
 @:from . import models
 }
@@ -33,6 +33,8 @@ from msrest.pipeline import ClientRawResponse
 @EmptyLine
 class @(Model.Name)Configuration(Configuration):
     """Configuration for @(Model.Name)
+    Note that all parameters used to create this instance are saved as instance
+    attributes.
 @EmptyLine
 @foreach(var property in Model.Properties)
 {
@@ -52,7 +54,7 @@ class @(Model.Name)Configuration(Configuration):
 @EmptyLine
         super(@(Model.Name)Configuration, self).__init__(base_url, filepath)
 @EmptyLine
-        self.user_agent = '@Model.UserAgent'
+        self.add_user_agent('@Model.UserAgent')
 @if (Model.Properties.Any())
 {
 @EmptyLine
@@ -68,6 +70,15 @@ class @(Model.Name)(object):
 @EmptyLine
     :param config: Configuration for client.
     :type config: @(Model.Name)Configuration
+@if (Model.MethodGroupModels.Any())
+{
+@EmptyLine
+  foreach (var methodGroup in Model.MethodGroupModels)
+  {
+@:    :ivar @(methodGroup.MethodGroupName.ToPythonCase()): @(methodGroup.MethodGroupName) operations
+@:    :vartype @(methodGroup.MethodGroupName.ToPythonCase()): .operations.@(methodGroup.MethodGroupType)
+  }
+}
     """
 @EmptyLine
     def __init__(self, config):
